<resources>
    <string name="app_name">XYO BLE Sample</string>

    <string name="advertiser">Advertiser</string>
    <string name="beep_all">Beep All</string>

    <string name="advertising_mode_title">Advertising Mode</string>
    <string name="advertising_mode_selector_1">ADVERTISE_MODE_LOW_LATENCY</string>
    <string name="advertising_mode_selector_2">ADVERTISE_MODE_BALANCED</string>
    <string name="advertising_mode_selector_3">ADVERTISE_MODE_LOW_POWER</string>
    <string name="none">NONE</string>
    <string name="advertising_power_title">Advertising Power</string>
    <string name="advertising_power_selector_1">ADVERTISE_TX_POWER_HIGH</string>
    <string name="advertising_power_selector_2">ADVERTISE_TX_POWER_MEDIUM</string>
    <string name="advertising_power_selector_3">ADVERTISE_TX_POWER_LOW</string>
    <string name="advertising_power_selector_4">ADVERTISE_TX_POWER_ULTRA_LOW</string>
    <string name="connectible_title">Connectible</string>
    <string name="_true">TRUE</string>
    <string name="_false">FALSE</string>
    <string name="timeout_title">Timeout</string>
    <string name="include_device_name_title">Include Device Name</string>
    <string name="include_tx_power_level_title">Include TxPower Level</string>
    <string name="primary_service_title">Primary Service UUID</string>
    <string name="primary_service_data_title">Primary Service Data</string>
    <string name="manufacturer_id_title">Manufacturer Id</string>
    <string name="manufacturer_data_title">Manufacturer Data</string>
    <string name="update">Update</string>
    <string name="start_async">Start Async</string>
    <string name="start_sync">Start Sync</string>
    <string name="services">Services</string>
    <string name="service_uuid">Service UUID</string>
    <string name="characteristic_uuid">Characteristic UUID</string>
    <string name="view_characteristic">View</string>

    <string name="btn_start_test">Start Test</string>
    <string name="btn_stay_connected">Stay Connected</string>
    <string name="btn_find">Find</string>
    <string name="btn_stop_find">Stop Find</string>
    <string name="btn_stay_awake">Stay Awake</string>
    <string name="btn_fall_asleep">Fall Asleep</string>
    <string name="btn_lock">Lock</string>
    <string name="btn_unlock">Unlock</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_enable_notify">Enable Notify</string>
    <string name="btn_disable_notify">Disable Notify</string>

    <string name="info">Info</string>
    <string name="alert">Alert</string>
    <string name="battery">Battery</string>
    <string name="time">Time</string>
    <string name="device">Device</string>
    <string name="gap">GAP</string>
    <string name="gatt">GATT</string>
    <string name="link_loss">linkLoss</string>
    <string name="tx">Tx</string>
    <string name="song">Song</string>

    <string name="family">Family:\u0020</string>
    <string name="major">Major:\u0020</string>
    <string name="minor">Minor:\u0020</string>
    <string name="rssi">RSSI:\u0020</string>
    <string name="pulses">\u0020Pulses:\u0020</string>
    <string name="avg_gap">Avg. Gap:\u0020</string>
    <string name="last_gap">Last Gap:\u0020</string>
    <string name="max_gap">Max Gap:\u0020</string>
    <string name="enter">Enter:\u0020</string>
    <string name="exit">Exit:\u0020</string>
    <string name="lock">Lock:\u0020</string>
    <string name="name">Name:\u0020</string>
    <string name="connected">Connected:\u0020</string>
    <string name="address">Address:\u0020</string>
    <string name="uuid">UUID:\u0020</string>
    <string name="uptime">\u0020Uptime:\u0020</string>
    <string name="pulses_second">\u0020Pulses/Second:\u0020</string>
    <string name="devices">\u0020Devices:\u0020</string>
    <string name="refresh">Refresh</string>
    <string name="set_song_one">Set Song One</string>
    <string name="control_point">controlPoint:\u0020</string>
    <string name="unread_alert_status">unreadAlertStatus:\u0020</string>
    <string name="new_alert">newAlert:\u0020</string>
    <string name="supported_new_alert_category">supportedNewAlertCategory:\u0020</string>
    <string name="supported_unread_alert_category">supportedUnreadAlertCategory:\u0020</string>
    <string name="tx_power_level">TX Power Level:\u0020</string>
    <string name="current_song">Current Song:\u0020</string>

    <string name="battery_level">Battery Level:\u0020</string>
    <string name="current_time">currentTime:\u0020</string>
    <string name="local_time_information">localTimeInformation:\u0020</string>
    <string name="reference_time_information">referenceTimeInformation:\u0020</string>
    <string name="system_id">System Id:\u0020</string>
    <string name="model_number">Model Number:\u0020</string>
    <string name="serial">Serial#:\u0020</string>
    <string name="firmware_revision">Firmware Revision:\u0020</string>
    <string name="hardware_revision">Hardware Revision:\u0020</string>
    <string name="software_revision">Software Revision:\u0020</string>
    <string name="mfg_name">Mfg Name:\u0020</string>
    <string name="ieee_cert">IEEE Cert:\u0020</string>
    <string name="pnp_id">PnP Id:\u0020</string>
    <string name="device_name">deviceName:\u0020</string>
    <string name="appearance">appearance:\u0020</string>
    <string name="privacy_flag">privacyFlag:\u0020</string>
    <string name="reconnection_address">reconnectionAddress:\u0020</string>
    <string name="peripheral_preferred_connection_parameters">peripheralPreferredConnectionParameters:\u0020</string>
    <string name="service_changed">Service Changed:\u0020</string>
    <string name="alert_level">Alert Level:\u0020</string>
    <string name="hex_placeholder">0x%s</string>
    <string name="unknown_device">unknown device</string>
    <string name="not_supported_x2">Not supported by XY2BluetoothDevice</string>

    <string name="firmware">OTA</string>
    <string name="do_update">Update</string>
    <string name="load_image_from_server">Load Image From Server</string>
    <string name="select_a_file_below">Select a file below</string>
    <string name="update_started">Update started</string>
    <string name="bluetooth_disabled">Bluetooth Disabled</string>

    <string name="test">Test</string>
    <string name="ibeacon_advertiser">IBeacon Advertiser</string>
    <string name="standard_advertiser">Standard Advertiser</string>
    <string name="ibeacon_major">Major</string>
    <string name="ibeacon_minor">Minor</string>
    <string name="is_ibeacon">Is IBeacon</string>

    <string name="characteristics_uuid_title">Characteristic UUID</string>
    <string name="characteristics_type">Characteristic Type</string>
    <string name="characteristics_permission">Characteristic Permission</string>
    <string name="characteristics_value_hex">Characteristic Value Hex</string>
    <string name="characteristics_value_utf8">Characteristic Value UTF8</string>
    <string name="characteristic_button_update">Characteristic Update</string>
    <string name="service_type">Service Type</string>
    <string name="characteristics">Characteristics</string>

    <string name="central">Central</string>
    <string name="peripheral">Peripheral</string>
    <string name="active">Active</string>

    <string name="start_time">\u0020Start:</string>
    <string name="stay_awake">Stay Awake:</string>
    <string name="unlock">Unlock:</string>
    <string name="button_state">Button State:</string>
    <string name="buzzer">Buzzer:</string>
    <string name="ad_config">Ad Config:</string>
    <string name="button_config">Button Config:</string>
    <string name="buzzer_config">Buzzer Config:</string>
    <string name="last_error">Last Error:</string>
    <string name="reset">Reset:</string>
    <string name="self_test">Self Test:</string>
    <string name="debug">Debug:</string>
    <string name="left_behind">Left Behind:</string>
    <string name="color">Color:</string>
    <string name="hardware_create_date">Hardware Create Date:</string>
    <string name="host_device_name">\u0020Host Device Name:</string>
    <string name="no_bluetooth">No Bluetooth</string>
    <string name="lock_status">Lock Status:</string>
    <string name="interval">Interval:</string>
    <string name="ota_write">OTA Write:</string>
    <string name="reboot">Reboot:</string>
    <string name="hand_shake">Hand Shake:</string>
    <string name="version">Version:</string>
    <string name="buzzer_select">Buzzer Select:</string>
    <string name="surge">Surge:</string>
    <string name="button">Button:</string>
    <string name="disconnect">Disconnect:</string>
    <string name="virtual_beacon_settings">Virtual Beacon Settings:</string>
    <string name="tone">Tone:</string>
    <string name="inactive_virtual_beacon_settings">Inactive Virtual Beacon Settings</string>
    <string name="inactive_interval">Inactive Interval:</string>
    <string name="gps_interval">GPS Interval:</string>
    <string name="gps_mode">GPS Mode:</string>
    <string name="sim_id">SIM Id:</string>
    <string name="raw">Raw:</string>
    <string name="timeout">Timeout:</string>
    <string name="threshold">Threshold:</string>
    <string name="inactive">Inactive:</string>
    <string name="movement_count">Movement Count:</string>
    <string name="power">Power</string>
    <string name="net">Net</string>

    <string name="img_desc_xy_logo">xyo logo</string>
    <string name="button_beep">Beep</string>
    <string name="connectable">Connectable:</string>

</resources>
